--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "copy:linux": "cp -r static/* ./dist",
     "build": "yarn prebuild && rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript && yarn copy",
     "start": "ts-node --project tsconfig.node.json -r tsconfig-paths/register index.ts",
-    "release": "git subtree push --prefix dist https://github.com/dsedinkin/node-vk-clip-api release"
+    "release": "git subtree push --prefix dist https://github.com/sedlab/node-vk-clip-api release"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "latest",
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
-    "node-vk-api": "dsedinkin/node-vk-api#latest",
-    "node-vk-clip-api": "dsedinkin/node-vk-clip-api#latest"
+    "node-vk-api": "sedlab/node-vk-api#latest",
+    "node-vk-clip-api": "sedlab/node-vk-clip-api#latest"
   }
 }
